--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,18 +1,144 @@
-name: Docker Image CI
+name: Build and Publish Docker Image
 
 on:
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+    tags:
+      - 'v*'
+  workflow_dispatch:
+    inputs:
+      version:
+        description: 'Version für das Docker Image'
+        required: true
+      latest:
+        description: 'Als latest taggen?'
+        required: true
+        type: boolean
+        default: false
 
 jobs:
-
-  build:
-
+  prepare:
     runs-on: ubuntu-latest
-
+    outputs:
+      version: ${{ steps.set_vars.outputs.version }}
+      latest: ${{ steps.set_vars.outputs.latest }}
     steps:
-    - uses: actions/checkout@v3
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+      - name: Set variables
+        id: set_vars
+        run: |
+          if [ "${{ github.event_name }}" == "push" ]; then
+            echo "version=$(echo ${GITHUB_REF#refs/tags/v})" >> $GITHUB_OUTPUT
+            # Set latest=true if version doesn't contain hyphen
+            if [[ ! "$(echo ${GITHUB_REF#refs/tags/v})" =~ "-" ]]; then
+              echo "latest=true" >> $GITHUB_OUTPUT
+            else
+              echo "latest=false" >> $GITHUB_OUTPUT
+            fi
+          else
+            echo "version=${{ github.event.inputs.version }}" >> $GITHUB_OUTPUT
+            echo "latest=${{ github.event.inputs.latest }}" >> $GITHUB_OUTPUT
+          fi
+
+  build-amd64:
+    needs: prepare
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        packaging: [pponly, nextcloud, firefox, firefox-nextcloud]
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and push AMD64 image
+        run: |
+          VERSION="${{ needs.prepare.outputs.version }}"
+          PACKAGING="${{ matrix.packaging }}"
+          IMAGE="nimra98/portfolio-performance"
+          
+          docker buildx build \
+            --build-arg VERSION=${VERSION} \
+            --build-arg PACKAGING=${PACKAGING} \
+            --platform linux/amd64 \
+            --push \
+            --tag ${IMAGE}:${PACKAGING}-${VERSION}-amd64 \
+            .
+
+  build-arm64:
+    needs: prepare
+    runs-on: ubuntu-latest-arm64
+    strategy:
+      matrix:
+        packaging: [pponly, nextcloud, firefox, firefox-nextcloud]
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and push ARM64 image
+        run: |
+          VERSION="${{ needs.prepare.outputs.version }}"
+          PACKAGING="${{ matrix.packaging }}"
+          IMAGE="nimra98/portfolio-performance"
+          
+          docker buildx build \
+            --build-arg VERSION=${VERSION} \
+            --build-arg PACKAGING=${PACKAGING} \
+            --platform linux/arm64 \
+            --push \
+            --tag ${IMAGE}:${PACKAGING}-${VERSION}-arm64 \
+            .
+
+  create-manifests:
+    needs: [prepare, build-amd64, build-arm64]
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        packaging: [pponly, nextcloud, firefox, firefox-nextcloud]
+    steps:
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Create and push multi-arch manifest
+        run: |
+          VERSION="${{ needs.prepare.outputs.version }}"
+          PACKAGING="${{ matrix.packaging }}"
+          LATEST="${{ needs.prepare.outputs.latest }}"
+          IMAGE="nimra98/portfolio-performance"
+          
+          # Enable Docker CLI experimental features
+          export DOCKER_CLI_EXPERIMENTAL=enabled
+          
+          # Create and push versioned manifest
+          docker manifest create ${IMAGE}:${PACKAGING}-${VERSION} \
+            ${IMAGE}:${PACKAGING}-${VERSION}-amd64 \
+            ${IMAGE}:${PACKAGING}-${VERSION}-arm64
+          
+          docker manifest push ${IMAGE}:${PACKAGING}-${VERSION}
+          
+          # If latest, create and push latest manifest for this packaging type
+          if [ "${LATEST}" = "true" ]; then
+            docker manifest create ${IMAGE}:${PACKAGING} \
+              ${IMAGE}:${PACKAGING}-${VERSION}-amd64 \
+              ${IMAGE}:${PACKAGING}-${VERSION}-arm64
+            
+            docker manifest push ${IMAGE}:${PACKAGING}
+          fi
