--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -73,7 +73,7 @@ jobs:
 
   build-arm64:
     needs: prepare
-    runs-on: ubuntu-latest-arm64
+    runs-on: ubuntu-24.04-arm
     strategy:
       matrix:
         packaging: [pponly, nextcloud, firefox, firefox-nextcloud]
