--- a/.github/workflows/release-watcher.yml
+++ b/.github/workflows/release-watcher.yml
@@ -40,7 +40,8 @@ jobs:
           ASSETS=$(gh release view $LATEST_RELEASE -R portfolio-performance/portfolio --json assets -q '.assets[].name')
           echo "Assets are: $ASSETS"
 
-          if [[ "$ASSETS" == *".linux.x86_64.tar.gz"* && "$ASSETS" == *".linux.aarch64.tar.gz"* ]]; then
+          # Check for specific artifacts
+          if echo "$ASSETS" | grep -q "linux.gtk.x86_64.tar.gz" && echo "$ASSETS" | grep -q "linux.gtk.aarch64.tar.gz"; then
             echo "All artifacts are present."
             echo "version=$VERSION" >> $GITHUB_OUTPUT
             echo "trigger=true" >> $GITHUB_OUTPUT
